--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-feed": "^1.2.0",
     "hexo-generator-index": "^0.2.1",
+    "hexo-generator-searchdb": "^1.0.8",
     "hexo-generator-sitemap": "^1.2.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-renderer-ejs": "^0.2.0",
@@ -21,5 +22,8 @@
     "hexo-server": "^0.2.0",
     "hexo-util": "^0.6.1",
     "hexo-wordcount": "^3.0.2"
+  },
+  "devDependencies": {
+    "hexo-generator-baidu-sitemap": "^0.1.2"
   }
 }
