--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "hexo-renderer-marked": "^0.2.10",
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.2.0",
-    "hexo-util": "^0.6.1",
-    "hexo-wordcount": "^3.0.2"
+    "hexo-symbols-count-time": "^0.2.0",
+    "hexo-util": "^0.6.1"
   },
   "devDependencies": {}
 }
