--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "exec-buffer": "^0.1.1",
     "hexo": "^3.2.0",
     "hexo-deployer-git": "^0.3.0",
+    "hexo-filter-optimize": "^0.1.3",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-baidu-sitemap": "^0.1.2",
     "hexo-generator-category": "^0.1.3",
