--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "hexo": "^3.2.0",
     "hexo-deployer-git": "^0.3.0",
     "hexo-filter-optimize": "^0.1.3",
+    "hexo-fs": "^1.0.0",
     "hexo-generator-archive": "^0.1.4",
-    "hexo-generator-baidu-sitemap": "^0.1.2",
+    "hexo-generator-baidu-sitemap": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-feed": "^1.2.0",
     "hexo-generator-index": "^0.2.1",
@@ -24,7 +25,9 @@
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.2.0",
     "hexo-symbols-count-time": "^0.2.0",
-    "hexo-util": "^0.6.1"
+    "hexo-util": "^0.6.1",
+    "highlight": "^0.2.4",
+    "highlight.js": "^9.13.1"
   },
   "devDependencies": {
     "hexo-generator-baidu-sitemap": "^0.1.2"
